[tool.poetry]
name = "asgi_server"
version = "0.1.0"
description = ""
authors = ["szymek <szymon.roslaniecc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
